[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Change_scene_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/UI components/Pokemon_info_page_attacks.gd" type="Script" id=2]
[ext_resource path="res://assets/themedark_letters_label.tres" type="Theme" id=3]
[ext_resource path="res://assets/button_bag.tres" type="Theme" id=4]
[ext_resource path="res://assets/pokemon_info_slides/info1.tres" type="Texture" id=5]
[ext_resource path="res://assets/pokemon_info_slides/menu1.tres" type="Texture" id=6]
[ext_resource path="res://assets/pokemon_info_slides/info_sprite_holder.tres" type="Texture" id=7]

[node name="Pokemon_info_page" type="Control"]
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="info_laying" type="TextureRect" parent="."]
margin_top = 68.0
margin_right = 1030.0
margin_bottom = 596.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 252.959, 226.36 )
scale = Vector2( 4.255, 3.709 )
texture = ExtResource( 7 )
hframes = 2

[node name="menu_bar" type="Sprite" parent="."]
position = Vector2( 512.16, 38.4055 )
scale = Vector2( 4.26589, 4.39118 )
texture = ExtResource( 6 )
vframes = 4
frame = 1

[node name="GridContainer2" type="GridContainer" parent="."]
margin_left = 32.0
margin_top = 32.0
margin_right = 136.0
margin_bottom = 104.0
rect_pivot_offset = Vector2( 72, 16 )
custom_constants/vseparation = 25
custom_constants/hseparation = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GridContainer2"]
margin_right = 189.0
margin_bottom = 37.0
text = "POKEMON ABILITIES"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="GridContainer2"]
margin_top = 62.0
margin_right = 189.0
margin_bottom = 99.0
text = "Level %s %h"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer4" type="GridContainer" parent="."]
margin_left = 880.536
margin_top = 158.02
margin_right = 1013.54
margin_bottom = 487.02
rect_pivot_offset = Vector2( -64, -32 )
custom_constants/vseparation = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fill" type="Label" parent="GridContainer4"]
margin_right = 26.0
margin_bottom = 37.0
text = "%s"

[node name="fill2" type="Label" parent="GridContainer4"]
margin_top = 49.0
margin_right = 26.0
margin_bottom = 86.0
text = "%s"

[node name="fill3" type="Label" parent="GridContainer4"]
margin_top = 98.0
margin_right = 26.0
margin_bottom = 135.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fill4" type="Label" parent="GridContainer4"]
margin_top = 147.0
margin_right = 26.0
margin_bottom = 184.0
text = "%s"

[node name="fill5" type="Label" parent="GridContainer4"]
margin_top = 196.0
margin_right = 26.0
margin_bottom = 233.0
text = "%s"

[node name="GridContainer5" type="GridContainer" parent="."]
margin_left = 716.041
margin_top = 406.02
margin_right = 887.041
margin_bottom = 509.02
custom_constants/vseparation = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="experiencevalue" type="Label" parent="GridContainer5"]
margin_right = 13.0
margin_bottom = 37.0
text = "s"

[node name="experience_next" type="Label" parent="GridContainer5"]
margin_top = 44.0
margin_right = 13.0
margin_bottom = 81.0
text = "e"

[node name="Change_scene_button" parent="." instance=ExtResource( 1 )]
margin_left = 944.0
margin_top = 24.0
margin_right = 985.0
margin_bottom = 47.0
theme = ExtResource( 4 )
text = "BACK"
next_scene_path = "res://Scenes/UI components/Pokemon_info_box_.tscn"

[node name="nickname" type="Label" parent="."]
margin_left = 360.0
margin_top = 93.0
margin_right = 456.0
margin_bottom = 130.0
text = "Nickname"

[node name="hp" type="Label" parent="."]
margin_left = 836.495
margin_top = 90.5152
margin_right = 876.495
margin_bottom = 127.515
text = "HP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 240, 248 )
scale = Vector2( 3, 3 )
